--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: History-of-the-Decline-and-Fall-of-the-Roman-Empire---Volume-6_736
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   commentator:
     agent_name: Milman, Henry Hart
@@ -9,6 +9,9 @@ contributor:
     gutenberg_agent_id: '8722'
     url: http://www.gutenberg.org/2009/agents/8722
     wikipedia: http://en.wikipedia.org/wiki/Henry_Hart_Milman
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Gibbon, Edward
@@ -18,6 +21,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/375
     wikipedia: http://en.wikipedia.org/wiki/Edward_Gibbon
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/736#History-of-the-Decline-and-Fall-of-the-Roman-Empire---Volume-6
 gutenberg_issued: '1996-11-01'
 gutenberg_type: Text
 identifiers:
